# agentic-delivery-system

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  _changelog.md  _decisions.md  _pipeline-run-modeA.md  _pipeline-run-modeB.md  _pipeline-run.md  _prompt-run.md  _rules.md  _tracker.md  manifest.json  package.json
_fixtures/brownfield-adopt/src/: README.md  pyproject.toml
_fixtures/brownfield-adopt/src/expense_tracker/: __init__.py  app.py
_fixtures/brownfield-bugfix/: README.md  pyproject.toml
_fixtures/brownfield-bugfix/.adr/: 02-triage.json  deferred-decisions.json
_fixtures/brownfield-bugfix/.adr/03-options/: DP2.decision.json  DP6.decision.json
_fixtures/brownfield-bugfix/.adr/drafts/: 0001-adopt-single-deployment-monolith-flat-structure.draft.md  0003-adopt-relational-database-postgresql-for-persistence.draft.md  0008-adopt-environment-variables-as-secrets-injection-strategy.draft.md
_fixtures/brownfield-bugfix/.adr/log/: 0002-adopt-python-with-django-or-flask-fastapi-as-tech-stack.md  0003-adopt-relational-database-postgresql-for-persistence.md  0006-adopt-paas-platform-render-fly-io-railway-for-deployment.md
_fixtures/brownfield-bugfix/.aprd/: 00-raw-request.md  01-classification.json  02-extraction.json  04-gaps.json  05-questions.md  06-answers.md  07-assumptions.json  aprd.v2.frozen.md  baseline-map.json  diagnosis.json
_fixtures/brownfield-bugfix/.aprd/change-requests/: CR-bug-001.md
_fixtures/brownfield-bugfix/.hld/skeleton/: contracts.json  (+2 more)
_fixtures/brownfield-bugfix/.roadmap/: 03-verticality.json  05-sequence.json
(+711 files in other folders)
