[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "freelancer-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # ADR-0002: Python / Django stack
    "django>=4.2",
    # ADR-0003: PostgreSQL driver
    "psycopg2-binary>=2.9",
    # ADR-0005: Google OAuth 2.0
    "authlib>=1.3",
    "requests>=2.31",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [".build/skeleton/oracle"]
