[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "expense-tracker"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "sqlite3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
